--- a/tests/test_classes.ipynb
+++ b/tests/test_classes.ipynb
@@ -32,7 +32,7 @@
     "    \n",
     "    def rotation_matrix(self) -> np.ndarray:\n",
     "        \"\"\"Return the rotation matrix.\"\"\"\n",
-    "        om, ph, ka = self.omega, self.phi, self.kappa\n",
+    "        om, ph, ka = self['omega'], self['phi'], self['kappa']\n",
     "        return np.array(\n",
     "            [\n",
     "                [\n",
