--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Coord2d' from 'openptv_python.epi' (/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/epi.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MAXCAND\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcorrespondences\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     10\u001b[0m     consistent_pair_matching,\n\u001b[1;32m     11\u001b[0m     match_pairs,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m     safely_allocate_target_usage_marks,\n\u001b[1;32m     15\u001b[0m )\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mepi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Coord2d\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimgcoord\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m img_coord\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparameters\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ControlPar, read_control_par, read_volume_par\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Coord2d' from 'openptv_python.epi' (/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/epi.py)"
+     ]
+    }
+   ],
    "source": [
     "# %load tests/test_corresp.py\n",
     "\"\"\"Unit tests for the correspondence code.\"\"\"\n",
@@ -27,10 +39,8 @@
     "from openptv_python.tracking_frame_buf import (\n",
     "    Frame,\n",
     "    Target,\n",
-    "    TargetArray,\n",
     "    match_coords,\n",
     "    matched_coords_as_arrays,\n",
-    "    n_tupel,\n",
     "    read_targets,\n",
     ")\n",
     "from openptv_python.trafo import dist_to_flat, metric_to_pixel, pixel_to_metric\n",
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +121,14 @@
     "\n",
     "            corrected[cam][part].x = x\n",
     "            corrected[cam][part].y = y\n",
-    "            corrected[cam][part].pnr = frm.targets[cam][part].pnr\n",
+    "            corrected[cam][part]['pnr'] = frm.targets[cam][part]['pnr']\n",
     "\n",
     "            print(f\"frm.targets[cam][part].x: {frm.targets[cam][part].x}\")\n",
     "            print(f\"frm.targets[cam][part].y: {frm.targets[cam][part].y}\")\n",
-    "            print(f\"frm.targets[cam][part].pnr: {frm.targets[cam][part].pnr}\")\n",
+    "            print(f\"frm.targets[cam][part]['pnr']: {frm.targets[cam][part]['pnr']}\")\n",
     "            print(corrected[cam][part].x)\n",
     "            print(corrected[cam][part].y)\n",
-    "            print(corrected[cam][part].pnr)\n",
+    "            print(corrected[cam][part]['pnr'])\n",
     "\n",
     "        # This is expected by find_candidate()\n",
     "        corrected[cam].sort(key=lambda coord: coord.x)\n",
@@ -128,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +166,7 @@
     "                    cpt_ix = 15 - cpt_ix  # Avoid symmetric case\n",
     "\n",
     "                targ = frm.targets[cam][cpt_ix]\n",
-    "                targ.pnr = cpt_ix\n",
+    "                targ['pnr'] = cpt_ix\n",
     "\n",
     "                tmp = np.r_[cpt_vert * 10, cpt_horz * 10, 0]\n",
     "                targ.x, targ.y = img_coord(tmp, calib[cam], cpar.mm)\n",
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,16 +466,16 @@
     "            for subcam in range(cam + 1, cpar.num_cams):\n",
     "                for part in range(frm.num_targets[cam]):\n",
     "                    correct_pnr = (\n",
-    "                        corrected[cam][corr_lists[cam][subcam][part].p1].pnr\n",
+    "                        corrected[cam][corr_lists[cam][subcam][part].p1]['pnr']\n",
     "                        if (subcam - cam) % 2 == 0\n",
-    "                        else 15 - corrected[cam][corr_lists[cam][subcam][part].p1].pnr\n",
+    "                        else 15 - corrected[cam][corr_lists[cam][subcam][part].p1]['pnr']\n",
     "                    )\n",
     "                    found_correct_pnr = False\n",
     "                    for cand in range(MAXCAND):\n",
     "                        if (\n",
     "                            corrected[subcam][\n",
     "                                corr_lists[cam][subcam][part].p2[cand]\n",
-    "                            ].pnr\n",
+    "                            ]['pnr']\n",
     "                            == correct_pnr\n",
     "                        ):\n",
     "                            found_correct_pnr = True\n",
@@ -524,11 +534,11 @@
     "        print(\"frame generated\\n\")\n",
     "        print(\n",
     "            \"%f %f %d\\n\"\n",
-    "            % (frm.targets[0][0].x, frm.targets[0][0].y, frm.targets[0][0].pnr)\n",
+    "            % (frm.targets[0][0].x, frm.targets[0][0].y, frm.targets[0][0]['pnr'])\n",
     "        )\n",
     "        print(\n",
     "            \"%f %f %d\\n\"\n",
-    "            % (frm.targets[1][0].x, frm.targets[1][0].y, frm.targets[1][0].pnr)\n",
+    "            % (frm.targets[1][0].x, frm.targets[1][0].y, frm.targets[1][0]['pnr'])\n",
     "        )\n",
     "\n",
     "        corrected = correct_frame(frm, calib, cpar, 0.0001)\n",
@@ -549,15 +559,15 @@
     "                    if (subcam - cam) % 2 == 0:\n",
     "                        correct_pnr = corrected[cam][\n",
     "                            corr_list[cam][subcam][part].p1\n",
-    "                        ].pnr\n",
+    "                        ]['pnr']\n",
     "                    else:\n",
     "                        correct_pnr = (\n",
-    "                            15 - corrected[cam][corr_list[cam][subcam][part].p1].pnr\n",
+    "                            15 - corrected[cam][corr_list[cam][subcam][part].p1]['pnr']\n",
     "                        )\n",
     "\n",
     "                    for cand in range(MAXCAND):\n",
     "                        if (\n",
-    "                            corrected[subcam][corr_list[cam][subcam][part].p2[cand]].pnr\n",
+    "                            corrected[subcam][corr_list[cam][subcam][part].p2[cand]]['pnr']\n",
     "                            == correct_pnr\n",
     "                        ):\n",
     "                            break\n",
@@ -568,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
