--- a/tests/test_match_pairs.ipynb
+++ b/tests/test_match_pairs.ipynb
@@ -97,20 +97,20 @@
     "            )\n",
     "            x, y = dist_to_flat(x, y, calib[cam], tol)\n",
     "\n",
-    "            row[part] = Coord2d(frm.targets[cam][part].pnr, x, y)\n",
+    "            row[part] = Coord2d(frm.targets[cam][part]['pnr'], x, y)\n",
     "\n",
     "            # print(\n",
-    "            #     f\"frm.targets:{cam},{part},{frm.targets[cam][part].x},{frm.targets[cam][part].y},{frm.targets[cam][part].pnr}\"\n",
+    "            #     f\"frm.targets:{cam},{part},{frm.targets[cam][part].x},{frm.targets[cam][part].y},{frm.targets[cam][part]['pnr']}\"\n",
     "            # )\n",
     "            # print(\n",
-    "            #     f\"corrected: {row[part].x} {row[part].y} {row[part].pnr}\"\n",
+    "            #     f\"corrected: {row[part].x} {row[part].y} {row[part]['pnr']}\"\n",
     "            # )\n",
     "\n",
     "        # This is expected by find_candidate()\n",
     "        row.sort(key=lambda Coord2d: Coord2d.x)\n",
     "\n",
     "        # for r in row:\n",
-    "        #     print(r.pnr, r.x, r.y)\n",
+    "        #     print(r['pnr'], r.x, r.y)\n",
     "\n",
     "    # corrected[cam] = row\n",
     "\n",
@@ -147,7 +147,7 @@
     "                    cpt_ix = 15 - cpt_ix  # Avoid symmetric case\n",
     "\n",
     "                targ = frm.targets[cam][cpt_ix]\n",
-    "                targ.pnr = cpt_ix\n",
+    "                targ['pnr'] = cpt_ix\n",
     "\n",
     "                tmp = np.r_[cpt_vert * 10, cpt_horz * 10, 0]\n",
     "                targ.x, targ.y = img_coord(tmp, calib[cam], cpar.mm)\n",
@@ -388,7 +388,7 @@
    "source": [
     "def find_candidate(\n",
     "    crd: List[Coord2d],\n",
-    "    pix: List[Target],\n",
+    "    pix: np.ndarray,\n",
     "    num: int,\n",
     "    xa: float,\n",
     "    ya: float,\n",
@@ -440,10 +440,10 @@
     "    xmax = cpar.pix_x * cpar.imx / 2\n",
     "    ymin = (-1) * cpar.pix_y * cpar.imy / 2\n",
     "    ymax = cpar.pix_y * cpar.imy / 2\n",
-    "    xmin -= cal.int_par.xh\n",
-    "    ymin -= cal.int_par.yh\n",
-    "    xmax -= cal.int_par.xh\n",
-    "    ymax -= cal.int_par.yh\n",
+    "    xmin -= cal.int_par['xh']\n",
+    "    ymin -= cal.int_par['yh']\n",
+    "    xmax -= cal.int_par['xh']\n",
+    "    ymax -= cal.int_par['yh']\n",
     "\n",
     "    xmin, ymin = correct_brown_affine(xmin, ymin, cal.added_par)\n",
     "    xmax, ymax = correct_brown_affine(xmax, ymax, cal.added_par)\n",
@@ -485,7 +485,7 @@
     "        if d >= vpar.eps0:\n",
     "            continue\n",
     "\n",
-    "        p2 = crd[j].pnr\n",
+    "        p2 = crd[j]['pnr']\n",
     "        \n",
     "        if p2 >= num: \n",
     "            print(f\"{p2} is larger than {num}\")\n",
@@ -514,7 +514,7 @@
     "\n",
     "        \n",
     "        tmp = Candidate(pnr=j, tol=d, corr=corr)\n",
-    "        # print(f\" good candidate {tmp} {tmp.pnr},{tmp.tol},{tmp.corr}\")\n",
+    "        # print(f\" good candidate {tmp} {tmp['pnr']},{tmp.tol},{tmp.corr}\")\n",
     "        \n",
     "        cand.append(tmp)\n",
     "        \n",
@@ -522,7 +522,7 @@
     "            print(f\"More candidates than {MAXCAND}: {len(cand)}\\n\")\n",
     "            return cand        \n",
     "\n",
-    "        # cand[count].pnr = j\n",
+    "        # cand[count]['pnr'] = j\n",
     "        # cand[count].tol = d\n",
     "        # cand[count].corr = corr\n",
     "        # count += 1\n",
@@ -736,7 +736,7 @@
     "\n",
     "            # origin point in the corr_list\n",
     "            corr_lists[i1][i2][i].p1 = i\n",
-    "            pt1 = corrected[i1][i].pnr\n",
+    "            pt1 = corrected[i1][i]['pnr']\n",
     "            \n",
     "            print(\"looking for dot\")\n",
     "            print(corr_lists[i1][i2][i].p1, pt1)\n",
@@ -770,7 +770,7 @@
     "                cand = cand[0:count]\n",
     "\n",
     "            for j in range(count):\n",
-    "                corr_lists[i1][i2][i].p2[j] = cand[j].pnr\n",
+    "                corr_lists[i1][i2][i].p2[j] = cand[j]['pnr']\n",
     "                corr_lists[i1][i2][i].corr[j] = cand[j].corr\n",
     "                corr_lists[i1][i2][i].dist[j] = cand[j].tol\n",
     "\n",
@@ -930,9 +930,9 @@
     "    for subcam in range(cam + 1, cpar.num_cams):\n",
     "        for part in range(frm.num_targets[cam]):\n",
     "            correct_pnr = (\n",
-    "                corrected[cam][corr_lists[cam][subcam][part].p1].pnr\n",
+    "                corrected[cam][corr_lists[cam][subcam][part].p1]['pnr']\n",
     "                if (subcam - cam) % 2 == 0\n",
-    "                else 15 - corrected[cam][corr_lists[cam][subcam][part].p1].pnr\n",
+    "                else 15 - corrected[cam][corr_lists[cam][subcam][part].p1]['pnr']\n",
     "            )\n",
     "\n",
     "            print(cam, subcam, part, correct_pnr)\n",
@@ -943,12 +943,12 @@
     "                    cand,\n",
     "                    corrected[subcam][\n",
     "                        corr_lists[cam][subcam][part].p2[cand]\n",
-    "                    ].pnr,\n",
+    "                    ]['pnr'],\n",
     "                )\n",
     "                if (\n",
     "                    corrected[subcam][\n",
     "                        corr_lists[cam][subcam][part].p2[cand]\n",
-    "                    ].pnr\n",
+    "                    ]['pnr']\n",
     "                    == correct_pnr\n",
     "                ):\n",
     "                    found_correct_pnr = True\n",
