--- a/tests/test_take_best_candidates.ipynb
+++ b/tests/test_take_best_candidates.ipynb
@@ -55,7 +55,7 @@
     "    for cand in range(num_cands):\n",
     "        has_used_target: bool = False\n",
     "        for cam in range(num_cams):\n",
-    "            tnum: int = src[cand].p[cam]\n",
+    "            tnum: int = src[cand]['p'][cam]\n",
     "\n",
     "            # If any correspondence in this camera, check that target is free\n",
     "            if tnum > -1 and tusage[cam][tnum] > 0:\n",
@@ -67,7 +67,7 @@
     "\n",
     "        # Only now can we commit to marking used targets.\n",
     "        for cam in range(num_cams):\n",
-    "            tnum = src[cand].p[cam]\n",
+    "            tnum = src[cand]['p'][cam]\n",
     "            if tnum > -1:\n",
     "                tusage[cam][tnum] += 1\n",
     "        dst[taken] = src[cand]\n",
