--- a/tests/test_calibration_optimize.ipynb
+++ b/tests/test_calibration_optimize.ipynb
@@ -180,7 +180,7 @@
     "#     c = Calibration()\n",
     "#     c.set_pos(calibration_array[:3])\n",
     "#     c.set_angles(calibration_array[3:])\n",
-    "#     c.int_par.cc = cc\n",
+    "#     c.int_par['cc'] = cc\n",
     "#     c.update_rotation_matrix()\n",
     "    \n",
     "    \n",
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "# x0 = np.hstack([cal.get_pos(), cal.get_angles()])\n",
-    "# cc = orig_cal.int_par.cc\n",
+    "# cc = orig_cal.int_par['cc']\n",
     "\n",
     "# sol = opt.minimize(residual, x0, args=(ref_pts, targs, control, cc), method='Nelder-Mead', tol=1e-6)"
    ]
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print( residual(np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]), ref_pts, targs, control, orig_cal.int_par.cc))"
+    "# print( residual(np.hstack([orig_cal.get_pos(), orig_cal.get_angles()]), ref_pts, targs, control, orig_cal.int_par['cc']))"
    ]
   },
   {
