structured arrays is tough

--- a/tests/test_match_pairs.ipynb
+++ b/tests/test_match_pairs.ipynb
@@ -150,13 +150,13 @@
     "                targ['pnr'] = cpt_ix\n",
     "\n",
     "                tmp = np.r_[cpt_vert * 10, cpt_horz * 10, 0]\n",
-    "                targ.x, targ.y = img_coord(tmp, calib[cam], cpar.mm)\n",
-    "                targ.x, targ.y = metric_to_pixel(targ.x, targ.y, cpar)\n",
+    "                targ['x'], targ['y'] = img_coord(tmp, calib[cam], cpar.mm)\n",
+    "                targ['x'], targ['y'] = metric_to_pixel(targ['x'], targ['y'], cpar)\n",
     "\n",
     "                # These values work in check_epi, so used here too\n",
-    "                targ.n = 25\n",
-    "                targ.nx = targ.ny = 5\n",
-    "                targ.sumg = 10\n",
+    "                targ['n'] = 25\n",
+    "                targ['nx'] = targ['ny'] = 5\n",
+    "                targ['sumg'] = 10\n",
     "\n",
     "    return frm"
    ]
