--- a/tests/test_classes.ipynb
+++ b/tests/test_classes.ipynb
@@ -248,13 +248,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)\n"
+      "array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')])\n"
      ]
     }
    ],
    "source": [
-    "from openptv_python.tracking_frame_buf import Target, TargetArray\n",
-    "t = Target()\n",
+    "from openptv_python.tracking_frame_buf import Target\n",
+    "t = Target\n",
     "print(t)"
    ]
   },
@@ -267,141 +268,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-      " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]\n"
+      "[array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')]),\n",
+      " array([(-999, 0., 0., 0, 0, 0, 0, -1)],\n",
+      "      dtype=[('pnr', '<i4'), ('x', '<f8'), ('y', '<f8'), ('n', '<i4'), ('nx', '<i4'), ('ny', '<i4'), ('sumg', '<i4'), ('tnr', '<i4')])]\n"
      ]
     }
    ],
    "source": [
-    "print([Target() for i in range(10)])"
+    "print([Target for i in range(10)])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TargetArray(num_targets=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       " Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TargetArray(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)],\n",
-       " [Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)],\n",
-       " [Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0),\n",
-       "  Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)]]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[TargetArray(4) for _ in range(3)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class Target:\n",
-    "    pnr: int = -999\n",
-    "    x: float = field(default_factory=float)\n",
-    "    y: float = field(default_factory=float)\n",
-    "    n: int = field(default_factory=int)\n",
-    "    nx: int = field(default_factory=int)\n",
-    "    ny: int = field(default_factory=int)\n",
-    "    sumg: int = field(default_factory=int)\n",
-    "    tnr: int = field(default_factory=int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Target(pnr=-999, x=0.0, y=0.0, n=0, nx=0, ny=0, sumg=0, tnr=0)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Target()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -420,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
